--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.host =  localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database = journaldb
+spring.data.mongodb.uri=mongodb+srv://bibek:bibek111@cluster0.gaaho0t.mongodb.net/journaldb
+#spring.data.mongodb.port = 27017
+#spring.data.mongodb.database = journaldb
